--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Hogwarts World</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="characters">Characters</string>
-    <string name="houses">Houses</string>
-    <string name="quiz">Quiz</string>
+    <string name="characters">Personajes</string>
+    <string name="houses">Casa</string>
+    <string name="quiz">Concurso</string>
 </resources>
